README and scripts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - '${FORWARD_DB_PORT:-3306}:3306'
     volumes:
       - db:/var/lib/mysql
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./.db/init.sql:/docker-entrypoint-initdb.d/init.sql
 volumes:
   db:
     driver: local
